--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
     <div class="color-container"><button class="lock-btn"></button></div>
     <div class="color-container"><button class="lock-btn"></button></div>
     <div class="color-container"><button class="lock-btn"></button></div>
+    <button>Save Current Palette</button>
+    <h2>Save a New Project</h2>
+    <input type='text' />
+    <button>SAVE</button>
+    <button>Generate New Palette</button>
+    <h2>Saved Palettes</h2>
   </body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/scripts.js" type="text/javascript"></script>
 </html>
