Add CSS styles of color blocks

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
-    <div class="color-container"><button class="lock-btn"></button></div>
-    <div class="color-container"><button class="lock-btn"></button></div>
-    <div class="color-container"><button class="lock-btn"></button></div>
-    <div class="color-container"><button class="lock-btn"></button></div>
-    <div class="color-container"><button class="lock-btn"></button></div>
+    <section>
+      <div class="color-container"><button class="lock-btn"></button></div>
+      <div class="color-container"><button class="lock-btn"></button></div>
+      <div class="color-container"><button class="lock-btn"></button></div>
+      <div class="color-container"><button class="lock-btn"></button></div>
+      <div class="color-container"><button class="lock-btn"></button></div>
+    </section>
     <button>Save Current Palette</button>
     <h2>Save a New Project</h2>
     <input type='text' />
