--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,19 @@
   </head>
   <body>
     <section>
-      <div class="color-container"><button class="lock-btn"></button></div>
-      <div class="color-container"><button class="lock-btn"></button></div>
-      <div class="color-container"><button class="lock-btn"></button></div>
-      <div class="color-container"><button class="lock-btn"></button></div>
-      <div class="color-container"><button class="lock-btn"></button></div>
+      <div class="color-container color1"><button class="lock-btn"></button></div>
+      <div class="color-container color2"><button class="lock-btn"></button></div>
+      <div class="color-container color3"><button class="lock-btn"></button></div>
+      <div class="color-container color4"><button class="lock-btn"></button></div>
+      <div class="color-container color5"><button class="lock-btn"></button></div>
     </section>
-    <button>Save Current Palette</button>
-    <h2>Save a New Project</h2>
-    <input type='text' />
-    <button>SAVE</button>
-    <button>Generate New Palette</button>
+    <form>
+      <button class="generate-btn">Generate New Palette</button>
+      <h2>Save a New Project</h2>
+      <input type='text' class="" />
+      <button class="save-project-btn">SAVE</button>
+      <button class="save-palette-btn">Save Current Palette</button>
+    </form>
     <h2>Saved Palettes</h2>
   </body>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
