Build color locking functionality

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <section>
-      <div class="color-container color1"><button class="lock-btn"></button></div>
-      <div class="color-container color2"><button class="lock-btn"></button></div>
-      <div class="color-container color3"><button class="lock-btn"></button></div>
-      <div class="color-container color4"><button class="lock-btn"></button></div>
-      <div class="color-container color5"><button class="lock-btn"></button></div>
+      <div class="color-container 1"><button class="lock-btn"></button></div>
+      <div class="color-container 2"><button class="lock-btn"></button></div>
+      <div class="color-container 3"><button class="lock-btn"></button></div>
+      <div class="color-container 4"><button class="lock-btn"></button></div>
+      <div class="color-container 5"><button class="lock-btn"></button></div>
     </section>
     <form>
       <button class="generate-btn">Generate New Palette</button>
