--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,22 @@
   <body>
     <section class="main-page-container">
       <section class="main-color-palette">
-        <div class="color-container 1"><button class="lock-btn"></button></div>
-        <div class="color-container 2"><button class="lock-btn"></button></div>
-        <div class="color-container 3"><button class="lock-btn"></button></div>
-        <div class="color-container 4"><button class="lock-btn"></button></div>
-        <div class="color-container 5"><button class="lock-btn"></button></div>
+        <div class="color-container 1"><h1 class="text-1"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 2"><h1 class="text-2"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 3"><h1 class="text-3"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 4"><h1 class="text-4"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 5"><h1 class="text-5"></h1><button class="lock-btn"></button></div>
       </section>
-      <form>
+      <section class="form-container">
         <button class="generate-btn">Generate New Palette</button>
         <h2>Save a New Project</h2>
-        <input type='text' class="" />
-        <button class="save-project-btn">SAVE</button>
+        <form class="save-project-form">
+          <input type='text' class="project-title-input" />
+          <button class="save-project-btn">SAVE</button>
+        </form>
         <button class="save-palette-btn">Save Current Palette</button>
-      </form>
-      <section>
+      </section>
+      <section class="saved-palettes">
         <h2>Saved Palettes</h2>
       </section>
     </section>
