--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   <body>
     <section class="main-page-container">
       <section class="main-color-palette">
-        <div class="color-container 1"><h1 class="text-1"></h1><button class="lock-btn"></button></div>
-        <div class="color-container 2"><h1 class="text-2"></h1><button class="lock-btn"></button></div>
-        <div class="color-container 3"><h1 class="text-3"></h1><button class="lock-btn"></button></div>
-        <div class="color-container 4"><h1 class="text-4"></h1><button class="lock-btn"></button></div>
-        <div class="color-container 5"><h1 class="text-5"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 1"><h1 class="color-hex text-1"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 2"><h1 class="color-hex text-2"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 3"><h1 class="color-hex text-3"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 4"><h1 class="color-hex text-4"></h1><button class="lock-btn"></button></div>
+        <div class="color-container 5"><h1 class="color-hex text-5"></h1><button class="lock-btn"></button></div>
       </section>
       <section class="form-container">
         <button class="generate-btn">Generate New Palette</button>
