Successfully print projects on page on window load and new project save click

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       </section>
       <section class="saved-palettes">
         <h2>Saved Palettes</h2>
+        <div class="saved-project-container"></div>
       </section>
     </section>
   </body>
