--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
         <button class="save-palette-btn">Save Current Palette</button>
       </section>
       <section class="saved-palettes">
-        <h2>Saved Palettes - (Click the Project Title to Select that Project)</h2>
+        <h2>Saved Palettes: </h2>
+        <h4>(Click the Project Title to Select that Project - Click pallette to display on left)</h4>
         <div class="saved-project-container"></div>
       </section>
     </section>
