--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,6 @@
       </section>
     </section>
   </body>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/scripts.js" type="text/javascript"></script>
 </html>
